k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hexagonal-ddd
  labels:
    app.kubernetes.io/name: hexagonal-ddd-api
