k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexagonal-ddd-api-service
  namespace: hexagonal-ddd
  labels:
    app: hexagonal-ddd-api
spec:
  selector:
    app: hexagonal-ddd-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
